add ai peak detector

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ alpaca-trade-api>=3.0.0
 pandas>=1.5.0
 numpy>=1.24.0
 yfinance>=0.2.0,<0.3  # For Python 3.9 compatibility
+scipy>=1.9.0  # For peak detection
 
